# uq-llm-survey-simulation

./: .gitignore  EEDI evaluations 4o.ipynb  EEDI evaluations all.ipynb  EEDI llm calls 4o.ipynb  LICENSE  OpinionQA evaluations 4o.ipynb  OpinionQA evaluations all.ipynb  OpinionQA llm calls 4o.ipynb  README.md  evaluations.py  pyproject.toml  requirements.txt
notebooks/: evaluations.ipynb  simulations.ipynb
src/: evaluations.py  simulations.py
